Bug 269291 - function "View->Include tag subtree" does not function on "People"
Summary: function "View->Include tag subtree" does not function on "People"
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Faces-Workflow (other bugs)
Version First Reported In: 2.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-24 10:02 UTC by Rinus Bakker
Modified: 2017-08-15 21:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rinus Bakker 2011-03-24 10:02:18 UTC
Version:           2.0.0 (using KDE 4.6.1) 
OS:                Linux

Once tagged it is no longer possible to browse all the faces because the
function "View->Include tag subtree" does not function on "People"


Reproducible: Always

Steps to Reproduce:
Detect faces (you can browse them ALL now under People->Unknown). Give them name tags 

Actual Results:  
Now the thumbs have moved to the different named treebranches, which is a good thing, but they are no longer browsable as a whole under "People" 

Expected Results:  
If you choose "Vieuw->Include tagtree" you might expect to see them ALL under the tag root "People"

The bug concerns usebillity not safety
Comment 1 Rinus Bakker 2011-03-24 10:09:24 UTC
It look likes I have missed the platform, it is Ubuntu 10.10
Comment 2 Marcel Wiesweg 2011-05-14 22:31:03 UTC
Git commit 9f7e49ba3169d57d3e66956d1ce61ca2ff35a15f by Marcel Wiesweg.
Committed on 14/05/2011 at 22:19.
Pushed by mwiesweg into branch 'master'.

List faces recursively:
Add SQL to include child tags in an ImageTagProperty search query.
Restructure the relevant code parts to avoid duplication.
Add the necessary glue code.
TODO: Test with MySQL

BUG: 269291

M  +2    -1    NEWS     
M  +1    -1    kioslave/digikamtags.cpp     
M  +2    -2    libs/database/imagelister.cpp     
M  +1    -1    libs/database/imagelister.h     
M  +35   -61   libs/database/imagequerybuilder.cpp     

http://commits.kde.org/digikam/9f7e49ba3169d57d3e66956d1ce61ca2ff35a15f