List faces recursively: Add SQL to include child tags in an ImageTagProperty search query. Restructure the relevant code parts to avoid duplication. Add the necessary glue code. TODO: Test with MySQL

BUG: 269291